tests/negative/gold/incomplete-block-call-test.gold
tests/negative/incomplete-block-call-test.toit:6:9: error: Incomplete expression
  block.
        ^
tests/negative/incomplete-block-call-test.toit:9:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed
